--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,10 +90,128 @@
     transition: all .3s ease;
 }
 
-.bb-content-header p{
+.bb-content-header p {
     color: #6b7280;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.6;
     margin-top: 12px;
+}
+
+/*============ Post Type Style =============*/
+.bb-dashboard-section {
+    background: #fff;
+    border: 1px solid #eaecf0;
+    border-radius: 12px;
+    box-shadow: 0 2px 2px 0 #00000014;
+    box-sizing: border-box;
+    padding: 32px 24px;
+}
+
+.bb-section-title {
+    color: #000;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.2;
+    margin: 0 0 20px;
+}
+
+.bb-section-disc {
+    color: #6b7280;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.6;
+    margin: 0 0 20px;
+}
+
+.bb-desh-card-wrap {
+    display: flex;
+    align-items: stretch;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.bb-desh-card__single {
+    align-items: center;
+    background-color: #eaecf0;
+    border-radius: 8px;
+    box-sizing: border-box;
+    display: flex;
+    flex: 1;
+    flex: 0 0 25%;
+    flex-direction: column;
+    gap: 4px;
+    max-width: 22%;
+    padding: 24px;
+}
+
+.bb-desh-card__title {
+    color: #6b7280;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: center;
+}
+
+.bb-desh-card__count {
+    color: #000000;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.2;
+}
+
+.bb-dashboard-data {
+    margin-top: 20px;
+}
+
+.bb-dashboard__table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.bb-dashboard__table th {
+    font-weight: 600;
+    height: 40px;
+    font-size: 16px;
+    line-height: 1.2;
+    min-width: 120px;
+    text-align: left !important;
+}
+
+.bb-dashboard__table td {
+    height: 40px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.7;
+}
+
+.bb-data-wrapper {
+    align-items: center;
+    display: flex;
+    gap: 10px;
+}
+
+.bb-data-progress-wrapper {
+    background-color: #eaecf0;
+    border-radius: 8px;
+    display: flex;
+    float: right;
+    height: 12px;
+    min-width: 160px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+
+.data-progress {
+    background-color: #006eff;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+}
+
+.bb-dashboard__table td:not(:last-child) .data-progress-wrapper {
+    margin-right: 50px;
 }
