--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+body{
+   font-family: "Inter", sans-serif;
+}
+
+
+/*=========== Reset Code ===============*/
 .wp-admin.toplevel_page_boltboost #wpbody-content {
     padding-bottom: 0;
 }
 
-/*======== Style Start ==========*/
+/*======== Header Section ==========*/
+.bb-dashboard-header {
+    align-items: center;
+    border-bottom: 1px solid #eaecf0;
+    display: flex;
+    background: #fff;
+    gap: 20px;
+    height: 60px;
+    justify-content: space-between;
+}
 
+.bb-logo{
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
+    gap: 5px;
+    height: 100%;
+    padding: 15px 24px;
+}
+
+.bb-log-img {
+    height: 25px;
+}
+
+.ba-dashboard__header__logo {
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
+    gap: 5px;
+    height: 100%;
+    padding: 15px 24px;
+}
+
+/*======== Layout Section ==========*/
 .bb-layout {
     margin-left: -20px;
 }
@@ -49,6 +89,10 @@
     font-weight: 700;
 }
 
+.bb-right-column {
+    width: 80%;
+}
+
 .bb-content {
     max-width: 90%;
     width: 100%;
@@ -57,6 +101,11 @@
 }
 
 /*-------- header -----------*/
+.bb-content-header{
+    max-width: 900px;
+    width: 100%;
+    margin-bottom: 30px;
+}
 .overview {
     color: #6b7280;
     font-size: 16px;
@@ -210,7 +259,7 @@
     width: 100%;
 }
 
-.data-progress {
+.bb-data-progress {
     background-color: #006eff;
     height: 100%;
     left: 0;
